force-app/main/default/objects/CTB_File_Automation__mdt/CTB_File_Automation__mdt.object-meta.xml
<CustomObject>
    <label>CTB File Automation</label>
    <pluralLabel>CTB File Automations</pluralLabel>
</CustomObject>