force-app/main/default/objects/CTB_File_Automation__mdt/fields/Bhead_Bank_Number__c.field-meta.xml
<CustomField>
    <fullName>Bhead_Bank_Number__c</fullName>
    <label>Bhead Bank Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>