force-app/main/default/objects/CTB_File_Automation__mdt/fields/Bhead_Format_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Bhead_Format_Identifier__c</fullName>
    <label>Bhead Format Identifier</label>
    <length>10</length>
    <type>Text</type>
</CustomField>