force-app/main/default/objects/CTB_File_Automation__mdt/fields/Bhead_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Bhead_Sequence_Number__c</fullName>
    <label>Bhead Sequence Number</label>
    <length>7</length>
    <type>Text</type>
</CustomField>