force-app/main/default/objects/CTB_File_Automation__mdt/fields/Bhead_Trans_Code__c.field-meta.xml
<CustomField>
    <fullName>Bhead_Trans_Code__c</fullName>
    <label>Bhead Trans Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>