force-app/main/default/objects/CTB_File_Automation__mdt/fields/Btral_Bank_Number__c.field-meta.xml
<CustomField>
    <fullName>Btral_Bank_Number__c</fullName>
    <label>Btral Bank Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>