force-app/main/default/objects/CTB_File_Automation__mdt/fields/Btral_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Btral_Credit_Amount__c</fullName>
    <label>Btral Credit Amount</label>
    <length>10</length>
    <type>Text</type>
</CustomField>