force-app/main/default/objects/CTB_File_Automation__mdt/fields/Btral_Debit_Trans_Count__c.field-meta.xml
<CustomField>
    <fullName>Btral_Debit_Trans_Count__c</fullName>
    <label>Btral Debit Trans Count</label>
    <length>6</length>
    <type>Text</type>
</CustomField>