force-app/main/default/objects/CTB_File_Automation__mdt/fields/Btral_Format_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Btral_Format_Identifier__c</fullName>
    <label>Btral Format Identifier</label>
    <length>5</length>
    <type>Text</type>
</CustomField>