force-app/main/default/objects/CTB_File_Automation__mdt/fields/Convert_Dollars_To_Cents__c.field-meta.xml
<CustomField>
    <fullName>Convert_Dollars_To_Cents__c</fullName>
    <label>Convert Dollars To Cents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>