force-app/main/default/objects/CTB_File_Automation__mdt/fields/Detail_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Detail_Record_Type__c</fullName>
    <label>Detail Record Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>