force-app/main/default/objects/CTB_File_Automation__mdt/fields/Drfts_Auth_Code__c.field-meta.xml
<CustomField>
    <fullName>Drfts_Auth_Code__c</fullName>
    <label>Drfts Auth Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>