force-app/main/default/objects/CTB_File_Automation__mdt/fields/Drfts_Merh_DBA_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>Drfts_Merh_DBA_Category_Code__c</fullName>
    <label>Drfts Merh DBA Category Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>