force-app/main/default/objects/CTB_File_Automation__mdt/fields/Drfts_Merh_DBA_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Drfts_Merh_DBA_Country_Code__c</fullName>
    <label>Drfts Merh DBA Country Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>