force-app/main/default/objects/CTB_File_Automation__mdt/fields/DRFTS_Merh_Desc__c.field-meta.xml
<CustomField>
    <fullName>DRFTS_Merh_Desc__c</fullName>
    <label>DRFTS Merh Desc</label>
    <length>1</length>
    <type>Text</type>
</CustomField>