force-app/main/default/objects/CTB_File_Automation__mdt/fields/Drfts_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Drfts_Sequence_Number__c</fullName>
    <label>Drfts Sequence Number</label>
    <length>7</length>
    <type>Text</type>
</CustomField>