force-app/main/default/objects/CTB_File_Automation__mdt/fields/DRFTS_Trans_Code__c.field-meta.xml
<CustomField>
    <fullName>DRFTS_Trans_Code__c</fullName>
    <label>DRFTS Trans Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>