force-app/main/default/objects/CTB_File_Automation__mdt/fields/DRN_Debt_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>DRN_Debt_Product_ID__c</fullName>
    <label>DRN Debt Product ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>