force-app/main/default/objects/CTB_File_Automation__mdt/fields/DRN_Trustee_ID__c.field-meta.xml
<CustomField>
    <fullName>DRN_Trustee_ID__c</fullName>
    <label>DRN Trustee ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>