force-app/main/default/objects/CTB_File_Automation__mdt/fields/File_Format_Identifier__c.field-meta.xml
<CustomField>
    <fullName>File_Format_Identifier__c</fullName>
    <label>File Format Identifier</label>
    <length>10</length>
    <type>Text</type>
</CustomField>