force-app/main/default/objects/CTB_File_Automation__mdt/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <label>File Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>