force-app/main/default/objects/CTB_File_Automation__mdt/fields/Header_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Header_Record_Type__c</fullName>
    <label>Header Record Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>