force-app/main/default/objects/CTB_File_Automation__mdt/fields/Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Member_ID__c</fullName>
    <label>Member ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>