force-app/main/default/objects/CTB_File_Automation__mdt/fields/Member_Type__c.field-meta.xml
<CustomField>
    <fullName>Member_Type__c</fullName>
    <label>Member Type</label>
    <length>4</length>
    <type>Text</type>
</CustomField>