force-app/main/default/objects/CTB_File_Automation__mdt/fields/Product_Description__c.field-meta.xml
<CustomField>
    <fullName>Product_Description__c</fullName>
    <label>Product Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>