force-app/main/default/objects/CTB_File_Automation__mdt/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <label>Sequence Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>