force-app/main/default/objects/CTB_File_Automation__mdt/fields/Thead_Bank_Number__c.field-meta.xml
<CustomField>
    <fullName>Thead_Bank_Number__c</fullName>
    <label>Thead Bank Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>