force-app/main/default/objects/CTB_File_Automation__mdt/fields/Thead_Trans_Code__c.field-meta.xml
<CustomField>
    <fullName>Thead_Trans_Code__c</fullName>
    <label>Thead Trans Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>