force-app/main/default/objects/CTB_File_Automation__mdt/fields/Thead_Trans_Desc__c.field-meta.xml
<CustomField>
    <fullName>Thead_Trans_Desc__c</fullName>
    <label>Thead Trans Desc</label>
    <length>6</length>
    <type>Text</type>
</CustomField>