force-app/main/default/objects/CTB_File_Automation__mdt/fields/Thead_Trans_Name__c.field-meta.xml
<CustomField>
    <fullName>Thead_Trans_Name__c</fullName>
    <label>Thead Trans Name</label>
    <length>8</length>
    <type>Text</type>
</CustomField>