force-app/main/default/objects/CTB_File_Automation__mdt/fields/Trailer_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Trailer_Record_Type__c</fullName>
    <label>Trailer Record Type</label>
    <length>1</length>
    <type>Text</type>
</CustomField>