force-app/main/default/objects/CTB_File_Automation__mdt/fields/Transaction_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Reference_Number__c</fullName>
    <label>Transaction Reference Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>