force-app/main/default/objects/CTB_File_Automation__mdt/fields/Ttral_Bank_Number__c.field-meta.xml
<CustomField>
    <fullName>Ttral_Bank_Number__c</fullName>
    <label>Ttral Bank Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>