force-app/main/default/objects/CTB_File_Automation__mdt/fields/Ttral_Debit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Ttral_Debit_Amount__c</fullName>
    <label>Ttral Debit Amount</label>
    <length>12</length>
    <type>Text</type>
</CustomField>