force-app/main/default/objects/CTB_File_Automation__mdt/fields/Ttral_Record_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Ttral_Record_Type_Code__c</fullName>
    <label>Ttral Record Type Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>